# rs-dirents2meta2rbat

./: Cargo.toml  README.md  doc-web.sh
examples/dirents2meta2rbat/: Cargo.toml  dirents2meta2rbat  run.sh
examples/dirents2meta2rbat/src/: main.rs
src/: lib.rs
