[package]
name = "rs-dirents2meta2rbat"
version = "0.1.0"
edition = "2024"

description = "Converts metadata values of the dirents to a record batch."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-dirents2meta2rbat"
homepage = "https://github.com/takanoriyanagitani/rs-dirents2meta2rbat"
documentation = "https://docs.rs/rs-dirents2meta2rbat/latest"
keywords = ["dirent", "metadata", "record-batch", "arrow"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

[dependencies.arrow]
version = "55"
default-features = false
features = [
]

[dependencies.futures]
version = "0"
default-features = false
features = [
	"async-await",
	"executor",
	"std",
]

[dependencies.futures-util]
version = "0"
default-features = false
features = [
	"async-await",
	"std",
]

[dependencies.tokio]
version = "1"
default-features = false
features = [
	"fs",
	"io-std",
	"io-util",
]

[dependencies.tokio-stream]
version = "0"
default-features = false
features = [
	"io-util",
]

[dependencies.async-stream]
version = "0"
default-features = false
features = [
]
